feat: enhance thread safety and eliminate demo simulations   - Replace HashMap with ConcurrentHashMap in EncryptionExportData for thread safety.   - Convert LinkedHashMap to ConcurrentHashMap in SearchCacheManager.   - Add thread-safe collections in SearchStrategyRouter for concurrent search operations.   - Implement atomic cache eviction with proper synchronization.   - Move AdvancedLoggingDemo from demos to demo package for consistency.   - Replace all simulations with real blockchain operations in demos:     * TestOffChainValidation: real file tampering and corruption     * EnhancedRecoveryExample: actual key deletion for recovery testing     * GranularTermVisibilityDemo: real search operations without fake delays     * AdvancedLoggingDemo: genuine blockchain validation and crypto operations   - Fix broken markdown references in demo scripts.   - Add missing OffChainData entity to persistence.xml configuration.   - Fix unused variable warnings in demos.